2004-11-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/context.cc (Context): take key argument in ctor.

	* lily/grob.cc (Grob): take key argument in ctor.  

	* lily/lilypond-key.cc (do_compare): new file.

	* lily/object-key.cc (Object_key): new file.

	* lily/include/object-key.hh (class Object_key): new file.

	* lily/include/lilypond-key.hh (class Lilypond_context_key): new file.

2004-11-13  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/lilypond-book.itely: add small warning about
	noindent default in lilypond-book.

	* Documentation/user/converters.itely: add examples for convert-ly.

	* Documentation/user/examples.itely: change version string in templates
	to 2.4.0.

2004-11-12  Karl Hammar  <karl@aspodata.se>

	* GNUmakefile.in (local-WWW-post): `find ...` overflows the
	cmdline, use xargs instead (backportme)

2004-11-10  Andreas Scherer  <andreas_mutopia@freenet.de>
	
	* Documentation/user/: Numerous fixes in the user manual.

2004-11-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/parser.yy (re_rhythmed_music): search music expression for
	context-id, surround by \new Voice if not found. Fixes:
	addlyrics-second-staff.ly

	* VERSION: 2.5.0 released.
	
2004-11-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/index.html.in: Fix url to one big page.  (backportme)

	* Documentation/user/GNUmakefile: Separate rules for split and
	unsplit html documents.  Remove perl massaging.  (backportme)

2004-11-11  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/lilypond-book.itely: add short warning about
	\lilypond{} in LaTeX docs.

2004-11-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Barf if kpathsea/kpathsea.h is not
	found.  (backportme)

	* Documentation/topdocs/INSTALL.texi (ec-fonts-mtraced): Add
	version requirement.  (backportme)

	* configure.in: Be explicit about old versions of
	ec-fonts-mtraced.  (backportme)

	* lily/context-selector.cc (set_tweaks): New function.