@@ -49,17 +49,6 @@
 } bind def
 
 
-/draw_symmetric_x_triangle % h w th
-{
-    setlinewidth
-    0 0 moveto
-    dup 0 lineto
-    2 div 
-    exch lineto
-    0 0 lineto
-    stroke
-} bind def
-
 /draw_round_box % breapth width depth height blot
 {
 	/blot exch def
