@@ -1,6 +1,9 @@
 2004-11-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/lookup.cc (triangle): rewrite, obviating symmetric_x_triangle().
+
 	* lily/context.cc (Context): take key argument in ctor.
+	(create_context): new function
 
 	* lily/grob.cc (Grob): take key argument in ctor.  
 
